# aquarium-sea-turtle

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: cmake.yml  memcheck.yml
cmake/: FetchAquariumSeagrass.cmake  FindGMP.cmake
doc/: Conventions.md
include/: sea-turtle.h
include/sea-turtle/: error.h  integer.h  string.h
src/: error.c  integer.c  sea-turtle.c  string.c
src/private/: string.h
src/test/: cmocka.h  wrap.c  wrap.h
test/: test_integer.c  test_sea-turtle.c  test_string.c
